# dat-parquet-handler

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/dat_parquet_handler/: __init__.py  cli.py  converter.py  logger.py
src/tecs_converter/: converter.py
tests/: conftest.py  test_converter.py
