[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dat-parquet-handler"
version = "0.1.0"
description = "Bidirectional converter between tec-suite DAT and Parquet files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "tec-suite contributors" }
]
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0"
]

[project.scripts]
dat-parquet-handler = "dat_parquet_handler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
